OPENMUSIC/resources/lib/mac/SDIF.framework/Headers/sdif.h


typedef struct SdifFileS SdifFileT;
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef struct SdifHashTableS SdifHashTableT;
SDIF_API int SdifFGetPos(SdifFileT *file, SdiffPosT *pos);
SDIF_API int SdifFSetPos(SdifFileT *file, SdiffPosT *pos);
typedef int32_t        SdifInt4;
typedef uint32_t       SdifUInt4;
typedef int            SdifInt4;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
typedef double         SdifFloat8;
typedef enum SdifDataTypeE
{
  eText     = 0x0301,
  eChar     = 0x0301,
  eFloat4   = 0x0004,
  eFloat8   = 0x0008,
  eInt1     = 0x0101,
  eInt2     = 0x0102,
  eInt4     = 0x0104,
  eInt8     = 0x0108,
  eUInt1    = 0x0201,
  eUInt2    = 0x0202,
  eUInt4    = 0x0204,
  eUInt8    = 0x0208,
  eFloat4a  = 0x0001,       
  eFloat4b  = 0x0020,       
  eFloat8a  = 0x0002,       
  eFloat8b  = 0x0040    
} SdifDataTypeET;
typedef struct SdifListS SdifListT;
typedef struct SdifNameValueS SdifNameValueT;
typedef struct SdifNameValueTableS SdifNameValueTableT;
typedef struct SdifNameValuesLS SdifNameValuesLT;
struct SdifNameValuesLS
{
    SdifListT*              NVTList;  
    SdifNameValueTableT*    CurrNVT;
    SdifUInt4               HashSize;
};
typedef struct SdifStreamIDS SdifStreamIDT;
typedef struct SdifStreamIDTableS SdifStreamIDTableT;
typedef struct SdifMatrixHeaderS SdifMatrixHeaderT;
typedef struct SdifOneRowS SdifOneRowT;
typedef struct SdifFrameHeaderS SdifFrameHeaderT;
typedef enum SdifFileModeE
{
  eUnknownFileMode,     
  eWriteFile,
  eReadFile,
  eReadWriteFile,
  ePredefinedTypes,     
  eModeMask = 7,        
  eParseSelection = 8
} SdifFileModeET ;
SDIF_API int SdifCheckFileFormat (const char *name);
SDIF_API size_t SdifToText (SdifFileT *SdifF, char *TextStreamName);
SDIF_API void   SdifDisableErrorOutput (void);
SDIF_API int    SdifFGetSignature       (SdifFileT *SdifF, size_t *NbCharRead);
SDIF_API size_t SdifFReadGeneralHeader    (SdifFileT *SdifF);
SDIF_API size_t SdifFReadAllASCIIChunks   (SdifFileT *SdifF);
SDIF_API size_t SdifFReadMatrixHeader     (SdifFileT *SdifF);
SDIF_API size_t SdifFReadOneRow           (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipOneRow(SdifFileT *SdifF);
SDIF_API size_t SdifFReadFrameHeader      (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipMatrix          (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipMatrixData       (SdifFileT *SdifF);
SDIF_API size_t SdifFSkipFrameData        (SdifFileT *SdifF);
SDIF_API size_t SdifFReadPadding          (SdifFileT *SdifF, size_t Padding);
SDIF_API size_t SdifFSkip (SdifFileT *SdifF, size_t bytes);
SDIF_API size_t SdifFReadAndIgnore (SdifFileT *SdifF, size_t bytes);
SDIF_API size_t  SdifFWriteGeneralHeader   (SdifFileT *SdifF);
SDIF_API size_t  SdifFWriteAllASCIIChunks  (SdifFileT *SdifF);
SDIF_API size_t  SdifFWriteMatrixHeader    (SdifFileT *SdifF);
SDIF_API size_t  SdifFWriteOneRow          (SdifFileT *SdifF);
SDIF_API size_t SdifFWriteMatrixData (SdifFileT *SdifF, void *Data);
SDIF_API size_t SdifFWriteMatrix (SdifFileT     *SdifF,
                                  SdifSignature  Signature,
                                  SdifDataTypeET DataType,
                                  SdifUInt4      NbRow,
                                  SdifUInt4      NbCol,
                                  void          *Data);
SDIF_API size_t  SdifFWritePadding         (SdifFileT *SdifF, size_t Padding);
SDIF_API size_t  SdifFWriteFrameHeader     (SdifFileT *SdifF);
SDIF_API void    SdifUpdateChunkSize       (SdifFileT *SdifF, size_t ChunkSize);
SDIF_API int     SdifUpdateFrameHeader     (SdifFileT *SdifF, size_t ChunkSize, 
                                   SdifInt4 NumMatrix);
SDIF_API SdifFileT* SdifFOpen                   (const char *Name, SdifFileModeET Mode);
SDIF_API void      SdifFClose                   (SdifFileT *SdifF);
SDIF_API void SdifGenInit (const char *PredefinedTypesFile);
SDIF_API void SdifGenInitCond (const char *PredefinedTypesFile);
SDIF_API void SdifGenKill (void);
SDIF_API void SdifPrintVersion(void);
SDIF_API SdifFrameHeaderT* SdifFSetCurrFrameHeader (SdifFileT *SdifF, 
                                                    SdifSignature Signature, 
                                                    SdifUInt4 Size,
                                                    SdifUInt4 NbMatrix, 
                                                    SdifUInt4 NumID, 
                                                    SdifFloat8 Time);
SDIF_API SdifMatrixHeaderT* SdifFSetCurrMatrixHeader (SdifFileT *SdifF, 
                                                      SdifSignature Signature,
                                                      SdifDataTypeET DataType, 
                                                      SdifUInt4 NbRow, 
                                                      SdifUInt4 NbCol);
SDIF_API SdifOneRowT*  SdifFSetCurrOneRow       (SdifFileT *SdifF, void *Values);
SDIF_API SdifOneRowT* SdifFSetCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol, SdifFloat8 Value);
SDIF_API SdifFloat8 SdifFCurrOneRowCol (SdifFileT *SdifF, SdifUInt4 numCol);
SDIF_API SdifSignature SdifFCurrSignature       (SdifFileT *SdifF);
SDIF_API SdifSignature SdifFCleanCurrSignature  (SdifFileT *SdifF);
SDIF_API SdifSignature SdifFCurrFrameSignature  (SdifFileT *SdifF);
SDIF_API SdifSignature SdifFCurrMatrixSignature (SdifFileT *SdifF);
SDIF_API SdifUInt4     SdifFCurrNbCol           (SdifFileT *SdifF);
SDIF_API SdifUInt4     SdifFCurrNbRow           (SdifFileT *SdifF);
SDIF_API SdifDataTypeET SdifFCurrDataType (SdifFileT *SdifF);
SDIF_API SdifUInt4     SdifFCurrNbMatrix        (SdifFileT *SdifF);
SDIF_API SdifUInt4     SdifFCurrID              (SdifFileT *SdifF);
SDIF_API SdifFloat8    SdifFCurrTime            (SdifFileT *SdifF);
SDIF_API SdifNameValuesLT *SdifFNameValueList (SdifFileT *file);
SDIF_API SdifStreamIDTableT *SdifFStreamIDTable (SdifFileT *file);
SDIF_API char*     SdifSignatureToString(SdifSignature Signature);
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));
SDIF_API SdifUInt4       SdifNameValueTableGetNumTable   (SdifNameValueTableT* NVTable);
SDIF_API SdifUInt4       SdifNameValueTableGetStreamID  (SdifNameValueTableT* NVTable);
SDIF_API SdifNameValuesLT*   SdifCreateNameValuesL       (SdifUInt4  HashSize);
SDIF_API void                SdifKillNameValuesL         (SdifNameValuesLT *NameValuesL);
SDIF_API SdifNameValuesLT*   SdifNameValuesLNewTable     (SdifNameValuesLT *NameValuesL, SdifUInt4 StreamID);
SDIF_API SdifNameValueTableT*SdifNameValuesLSetCurrNVT   (SdifNameValuesLT *NameValuesL, SdifUInt4 NumCurrNVT);
SDIF_API SdifNameValueT*     SdifNameValuesLGet          (SdifNameValuesLT *NameValuesL, char *Name);
SDIF_API SdifNameValueT*     SdifNameValuesLPutCurrNVT   (SdifNameValuesLT *NameValuesL, const char *Name,  const char *Value);
SDIF_API SdifListT *         SdifNameValueTableList (SdifNameValuesLT *nvtl);
SDIF_API SdifHashTableT*     SdifNameValueTableGetHashTable (SdifNameValueTableT* NVTable);
SDIF_API char *SdifNameValueGetName (SdifNameValueT *nv);
SDIF_API SdifSignature SdifStringToSignature (const char *str);
SDIF_API SdifStreamIDT*      SdifStreamIDTablePutSID     (SdifStreamIDTableT *SIDTable,
                                                 SdifUInt4           NumID, 
                                                 char               *Source, 
                                                 char               *TreeWay);